tello/workspace/log/build_2025-11-12_15-27-06/controller/stderr.log
  File "/home/alix.degironde/Public/tello-ros2/workspace/install/controller/lib/python3.12/site-packages/controller/manual_control.py", line 79
    exc
    ^^^
SyntaxError: expected 'except' or 'finally' block

